# CPlusPlus-Grade-Calculation-Program

./: CMakeLists.txt  README.md  main.cpp
CPP Files/: AddNewStudent.cpp  CalculateLetterGrade.cpp  ChangeGradingScheme.cpp  ChangeInformation.cpp  DeleteAllStudents.cpp  GradingPercentage.cpp  PrintAllStudentData.cpp  PrintAllStudentDataAlphabetical.cpp  PrintIntro.cpp  PrintSpecificStudentData.cpp  RemoveStudent.cpp  Student.cpp  startProgram.cpp
Header Files/: AddNewStudent.h  CalculateLetterGrade.h  ChangeGradingScheme.h  ChangeInformation.h  DeleteAllStudents.h  GradingPercentage.h  PrintAllStudentData.h  PrintAllStudentDataAlphabetical.h  PrintIntro.h  PrintSpecificStudentData.h  RemoveStudent.h  Student.h  startProgram.h
